egonlang-core/res/examples/invalid/infix_type_mismatch_fn.eg
1 % (): () => { () };
(): () => { () } % 1;

// out: TypeError: mismatched types: expected type `number` but received `function<tuple, ()>`
// out: TypeError: mismatched types: expected type `number` but received `function<tuple, ()>`
